--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@
                             <div class="contact-icon">📧</div>
                             <div>
                                 <h4 style="color: var(--text-primary);">Email</h4>
-                                <p style="color: var(--text-secondary);">patelishaan3@gmail.com</p>
+                                <p style="color: var(--text-secondary);"><a href="mailto:patelishaan3@gmail.com" style="color: white">patelishaan3@gmail.com</a></p>
                             </div>
                         </div>
                         <div class="contact-item">
